Fix bug when rows did not line up
Made button and textbox smaller along with
tiny extra padding to container to make sure spacing
and lining up is still correct.

Would have been better to create a div that contained
the whole row to keep things always in line.

--- a/styles.css
+++ b/styles.css
@@ -68,11 +68,19 @@
 .subtract-container{
     margin-left: 10px;
     margin-right:10px ;
+    display: flex;
+    align-items: center;
+    padding-bottom: 1.5px;
 }
 
 .subtract-textbox{
     width: 100px;
     margin-right: 10px;
     margin-left: 10px;
+    height: 15px;
     
+}
+.subtract-button{
+    height: 20px;
+    font-size: small;
 }
